# report_generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: async_concurrent_post_processing_report.pptx  async_post_processing_report.pptx  build_project_progress_template.py  build_sample_template.py  general_info_mapping.json  general_info_payload.json  general_info_report.pptx  general_info_template.pptx  general_report_mapping.json  general_report_output.pptx  general_report_payload.json  general_report_template.pptx  mapping.json  payload.json  post_processing_llm_results.json  post_processing_mapping.json  post_processing_payload.json  post_processing_report.pptx  project_progress_mapping.json  project_progress_payload.json  project_progress_report.pptx  project_progress_template.pptx
examples/italy_progress_report/: analysis.md  preview_replace_report.pptx  preview_replace_template.pptx  preview_template_generated_report.pptx  progress_template1_mapping.json  progress_template1_named.pptx  progress_template1_output.pptx  progress_template1_payload.json  source_progress_template1.pptx  报告.json  数据.json
src/report_generator/: __init__.py  api.py  builtin_processors.py  datasource.py  errors.py  generator.py  llm.py  models.py  (+1 more)
tests/: conftest.py  test_api.py  test_builtin_processors.py  test_chart_processor.py  test_datasource.py  test_generator.py  test_image_processor.py  test_llm_processor.py  test_mapping_models.py  test_milestone_processor.py  test_pptx_document.py  test_table_processor.py  test_text_processor.py  test_top_issues_processor.py
(+13 files in other folders)
