[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "report-generator"
version = "0.1.0"
description = "HTTP PPTX report generator with Excel-compatible component mapping"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "jinja2",
  "jsonpath-ng",
  "pillow",
  "pydantic>=2",
  "python-multipart",
  "python-pptx",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
